--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -418,8 +418,256 @@
           will give you a complete account of the system, and expound the actual teachings of the great explorer of the
           truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.
         </p>
+
+        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
+          will give you a complete account of the system, and expound the actual teachings of the great explorer of the
+          truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.
+        </p>
       </section>
       <!-- /.product ads -->
+      <main class="catalog-products">
+        <h1>MEN'S</h1>
+        <article class="product-catalog-images">
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(3).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(2).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(6).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2.png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <nav class="all-catalog-products">
+            <form>
+              <input
+                type="button"
+                value="view-all"
+                title=""
+              >
+            </form>
+          </nav>
+          <!-- /.all catalog products -->
+          <h1>WOMEN'S</h1>
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(4).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2.png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(1).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <div class="product-tile-image-container">
+            <a
+              href=""
+              class="product-tile-image"
+              title="Monochrome"
+            ><img
+                src="img.mono/Products/Recently Viewed Thumbnail 2(5).png"
+                alt="Monochrome"
+              ></a>
+            <a
+              href=""
+              class="product-tile-badge"
+              title="badge"
+            ><i class="far fa-heart"></i></a>
+
+          </div>
+          <!-- /.product tile image container -->
+          <footer class="product-tiles-details">
+            <p>
+              <a
+                href=""
+                title="monochrome"
+              >MONOCHROME</a>
+            </p>
+            <p>$425</p>
+          </footer>
+          <!-- /.product tiles details -->
+          <nav class="all-catalog-products-2">
+            <form>
+              <input
+                type="button"
+                value="view-all"
+                title=""
+              >
+            </form>
+          </nav>
+        </article>
+        <!-- /.product catalog images -->
+      </main>
+      <!-- /.catalog products -->
     </main>
     <!-- /.product.tiles -->
   </main>
@@ -483,11 +731,6 @@
     <!--/.footer social  -->
   </footer>
   <!-- /.footer -->
-
-
-
-
-
 </body>
 
 </html>
