--- a/Curs08/z-index/index.html
+++ b/Curs08/z-index/index.html
@@ -12,11 +12,22 @@
     href="css/style.css"
     rel="stylesheet"
   >
+  <link
+    rel="stylesheet"
+    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
+  >
 
 </head>
 
 <body>
   <div class="my-div"></div>
+  <div class="blue"></div>
+  <div class="container"></div>
+  <div class="purple"></div>
+  <div class="green"></div>
+  <div class="turquoise"></div>
+  <div class="transparent"></div>
+
 
   <div
     class="pixeltab-host"
